shift in philosophy again. Visible handles for each attribute set. Next hidden handles for sub-attributes.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 			</div>
 			<div class="holder">
 				<input type="search" class="search" placeholder="div.classname > span (or) font-weight:bold">
+				
+				<span id="message"></span>
+				
 				<select class="resize">
 					<option value="fluid">fluid width</option>
 					<optgroup label="standard">
