--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
 					<span class="intro">click on an element to style it<br>
 					[stats about this page here]</span>
 				</div>
+				<div class="tabs">
+					<a href="#">layout</a> | 
+					<a href="#">decoration</a> | 
+					<a href="#">text</a>
+				</div>
 				<div class="styles"></div>
 			</div>
 		</section>
 		<div class="holder">
+			<div style="position:absolute; top: 100px; width: 100%; height: 0; border-top: 10px solid rgba(0,0,0,.1);"></div>
 			<iframe src="iframe.html" class="document" id="iframe"></iframe>
 		</div>
 	</div>
