--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</script>
 			</div>
 		</section>
-		<div class="holder">
+		<div class="holder" id="pageHolder">
 			<div style="position:absolute; top: 100px; width: 100%; height: 0; border-top: 10px solid rgba(0,0,0,.1);"></div>
 			<iframe src="iframe.html" class="document" id="iframe"></iframe>
 		</div>
