--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
 						</select>
 					<% }); %>
 					</ul>
-					<!--<ul class="rules">
-					<% _.each(styles, function(style) { %>
-						<li><label><%= style %></label> : 
-						<span class="val"><%= styles[style] %></li>
-					<% }); %>
-					</ul>-->
 				</div>
 			</div>
 			</script>
 			</div>
 		</section>
 		<div class="holder" id="pageHolder">
+			<div id="controls" class="controls margin">
+				<div id="box" class="box">
+					<div id="padding" class="pad"></div>
+				</div>
+			</div>
+			
 			<div style="position:absolute; top: 100px; width: 100%; height: 0; border-top: 10px solid rgba(0,0,0,.1);"></div>
 			<iframe src="iframe.html" class="document" id="iframe"></iframe>
 		</div>
