--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			</div>
 		</section>
 		<div class="holder" id="pageHolder">
+			<div id="coverSheet" class="coverSheet"></div>
 			<div id="controls" class="controls margin">
 				<div id="box" class="box">
 					<div id="padding" class="pad"></div>
