making tweaks and getting style mode changing handles

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</section>
 		<div class="holder" id="pageHolder">
 			<div id="coverSheet" class="coverSheet"></div>
-			<div id="controls" class="controls margin">
+			<div id="controls" class="controls margin layoutMode">
 				<div id="box" class="box">
 					<div id="padding" class="pad"></div>
 				</div>
