got grid showing and mouse clickthroughs working

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 		</section>
 		<div class="holder" id="pageHolder">
 			<div id="coverSheet" class="coverSheet"></div>
+			<div id="grid" class="grid"></div>
 			<div id="controls" class="controls margin layoutMode">
 				<div id="box" class="box">
 					<div id="padding" class="pad"></div>
 				</div>
 			</div>
 			
-			<div style="position:absolute; top: 100px; width: 100%; height: 0; border-top: 10px solid rgba(0,0,0,.1);"></div>
 			<iframe src="iframe.html" class="document" id="iframe"></iframe>
 		</div>
 	</div>
