got handle values displaying properly (mostly), now to refactor handles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="doc">
 		<header class="hd">
 			<h1 class="logo">coDEsign</h1>
-			<input type="search" class="search" placeholder="div.classname > span (or) font-weight:bold">
+			<input type="search" class="search" placeholder="div.classname > span">
 		</header>
 		<section class="rightnav">
 			<div class="ct" id="propertiesModule">
