got zoom working with mouse location and selections

--- a/iframe.html
+++ b/iframe.html
@@ -5,6 +5,8 @@
  <link href="iframe.css" media="all" rel="stylesheet">
  </head>
  <body>
+ 
+ 	<div id="mouseTest"></div>
 	
 	<div class="block1" id="block1"></div>
 	<div class="block2" id="block2"></div>
