finally got grid snapping working correctly

--- a/iframe.html
+++ b/iframe.html
@@ -6,7 +6,7 @@
  </head>
  <body>
  
- 	<div id="mouseTest"></div>
+ 	<div id="snapTest"></div>
 	
 	<div class="block1" id="block1"></div>
 	<div class="block2" id="block2"></div>
