--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="tabs modes" id="modes">
 					<a href="#" id="mode0"<% if (curMode == 0) { %> class="active"<% } %>>layout</a> | 
 					<a href="#" id="mode1"<% if (curMode == 1) { %> class="active"<% } %>>decoration</a> | 
-					<a href="#" id="mode2"<% if (curMode == 2) { %> class="active"<% } %>>text</a>
+					<a href="#" id="mode2"<% if (curMode == 2) { %> class="active"<% } %>>typography</a>
 				</div>
 				<div class="styles">
 					<ul class="props">
