make selected rule highlight all affected elements

--- a/iframe.html
+++ b/iframe.html
@@ -7,15 +7,35 @@
  <body>
  
  	<div id="snapTest"></div>
-	
+
 	<div class="block1" id="block1"></div>
 	<div class="block2" id="block2"></div>
 	<div class="block3" id="block3"></div>
 	<div class="block4" id="block4"></div>
 	
+	<div class="header">
+		<ul class="nav horiz">
+			<li><a href="#">Nav Item</a></li>
+			<li><a href="#">Nav Item</a></li>
+			<li><a href="#">Nav Item</a></li>
+			<li><a href="#">Nav Item</a></li>
+			<li><a href="#">Nav Item</a></li>
+		</ul>
+	</div>
+	
 	<div class="content">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Grapevinesnail_01a.jpg/800px-Grapevinesnail_01a.jpg" alt="gastropod" class="right" width="300" />
+		<p>Pork beef flank, strip steak corned beef capicola beef ribs pork chop spare ribs jowl turkey. Shankle venison short ribs leberkäse, pig turducken ham hock rump beef short loin. Bacon chuck meatloaf, pancetta tri-tip pork belly ribeye hamburger sirloin tongue. Ball tip hamburger tenderloin, turducken fatback cow filet mignon sirloin. Shoulder jowl chuck t-bone, pancetta short ribs tenderloin bresaola meatball drumstick andouille filet mignon hamburger. Ribeye jerky shoulder ball tip venison kielbasa. Ham hock sausage ham shank frankfurter ball tip.</p>
+		
+		<div class="sidenote">
+			<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Slimaczek.jpg/220px-Slimaczek.jpg" alt="trochophore" />
+			<p class="caption">Capicola pork belly tri-tip, pork ham hock brisket ribeye short ribs short loin bresaola shank sausage shankle prosciutto salami.</p>
+		</div>
+		<p>Salami tail drumstick, kielbasa corned beef rump beef bresaola pork chop pork loin chuck. Capicola leberkäse tri-tip, short ribs prosciutto beef venison meatball short loin ball tip andouille pastrami corned beef shankle ham hock. Venison fatback beef ribs shank, leberkäse swine shankle. Strip steak drumstick pork belly, pancetta shoulder turkey pork chop bacon. Jowl fatback flank frankfurter swine pastrami, ground round tri-tip meatloaf pork chicken. Pancetta filet mignon andouille, brisket tongue turkey shoulder salami. Pig sausage bresaola beef chicken filet mignon, brisket strip steak t-bone spare ribs swine cow venison shankle tenderloin.</p>
+
+		<p>Tail pork belly corned beef ground round, pork loin biltong filet mignon sirloin. Spare ribs filet mignon shoulder, swine ham hock pork belly frankfurter tongue t-bone short ribs jerky fatback pancetta. Boudin turkey prosciutto brisket meatball. Sirloin beef ribs drumstick, rump filet mignon prosciutto bresaola capicola chuck ham hock spare ribs ball tip pork belly swine ham. Ribeye sirloin jerky, biltong ham hock boudin frankfurter fatback bacon pancetta ball tip. Beef ground round short ribs spare ribs. Kielbasa jowl meatball capicola, turkey cow brisket leberkäse.</p>
+
+		<p>Pork loin andouille sausage tail ham flank shoulder beef, drumstick filet mignon. Brisket leberkäse kielbasa, strip steak pork loin prosciutto pork chop. Pig bresaola frankfurter, andouille bacon venison swine filet mignon turkey tail beef ribs pork pastrami jerky shoulder. Ham hock venison pork loin andouille, shoulder sausage fatback tri-tip ribeye ball tip pancetta. Turkey pancetta boudin meatball. Spare ribs jerky sausage, strip steak t-bone tongue prosciutto pork chop tail filet mignon boudin short loin capicola venison. Brisket pastrami beef ribs turducken chuck hamburger.</p>
 	</div>
 	
  </body>
