--- a/iframe.html
+++ b/iframe.html
@@ -8,10 +8,10 @@
  
  	<div id="snapTest"></div>
 
-	<div class="block1" id="block1"></div>
-	<div class="block2" id="block2"></div>
-	<div class="block3" id="block3"></div>
-	<div class="block4" id="block4"></div>
+	<div class="block block1" id="block1"></div>
+	<div class="block block2" id="block2"></div>
+	<div class="block block3" id="block3"></div>
+	<div class="block block4" id="block4"></div>
 	
 	<div class="header">
 		<ul class="nav horiz">
