fixed a couple bugs, added Background object

--- a/iframe.html
+++ b/iframe.html
@@ -5,6 +5,7 @@
  <link href="iframe.css" media="all" rel="stylesheet">
  </head>
  <body>
+ <div class="doc">
  
  	<div id="snapTest"></div>
 
@@ -38,18 +39,6 @@
 		<p>Pork loin andouille sausage tail ham flank shoulder beef, drumstick filet mignon. Brisket leberkäse kielbasa, strip steak pork loin prosciutto pork chop. Pig bresaola frankfurter, andouille bacon venison swine filet mignon turkey tail beef ribs pork pastrami jerky shoulder. Ham hock venison pork loin andouille, shoulder sausage fatback tri-tip ribeye ball tip pancetta. Turkey pancetta boudin meatball. Spare ribs jerky sausage, strip steak t-bone tongue prosciutto pork chop tail filet mignon boudin short loin capicola venison. Brisket pastrami beef ribs turducken chuck hamburger.</p>
 	</div>
 	
- </body>
- <script type="text/javascript">
- /*var el = document.getElementById('block3');
- var margin = getStyle(el, 'margin');
- var margin_top = getStyle(el, 'margin-top');
- var marginTop = getStyle(el, 'marginTop');
- console.log(margin);
- console.log(margin_top);
- console.log(marginTop);
- 
- function getStyle(el, name) {
- 	return el.ownerDocument.defaultView.getComputedStyle(el,null)[name] || el.style[name] || undefined;
- }*/
- </script>
+ </div>
+</body>
 </html>
