got backgrounds displaying properly with thumbnails

--- a/index.html
+++ b/index.html
@@ -111,27 +111,28 @@
 					<ul>
 						<% _.each(backgrounds, function(bg) { %>
 						<li>
-							<div style="background-image:<%=bg.image %>;" class="bgThumb"></div> 
-							<select name="background-repeat">
+							background
+							<div style="background-image:<%=bg.image %>, url(layout/grid.png);" class="bgThumb"></div> 
+							repeat:<%=bg.repeat%> <select name="background-repeat">
 								<option value="">--- not set ---</option>
 								<option<% if(bg.repeat == 'no-repeat') {%> selected="selected"<%}%>>no-repeat</option>
 								<option<% if(bg.repeat == 'repeat-x') {%> selected="selected"<%}%>>repeat-x</option>
 								<option<% if(bg.repeat == 'repeat-y') {%> selected="selected"<%}%>>repeat-y</option>
 								<option<% if(bg.repeat == 'repeat') {%> selected="selected"<%}%>>repeat</option>
-							</select> 
-							<select name="background-origin">
+							</select> <br>
+							origin:<%=bg.origin%> <select name="background-origin">
 								<option value="">--- not set ---</option>
 								<option<% if(bg.origin == 'padding-box') {%> selected="selected"<%}%>>padding-box</option>
 								<option<% if(bg.origin == 'border-box') {%> selected="selected"<%}%>>border-box</option>
 								<option<% if(bg.origin == 'content-box') {%> selected="selected"<%}%>>content-box</option>
-							</select> 
-							<select name="background-attachment">
+							</select> <br>
+							attachment:<%=bg.attachment%> <select name="background-attachment">
 								<option value="">--- not set ---</option>
 								<option<% if(bg.attachment == 'scroll') {%> selected="selected"<%}%>>scroll</option>
 								<option<% if(bg.attachment == 'fixed') {%> selected="selected"<%}%>>fixed</option>
 								<option></option>
-							</select> 
-							<select name="background-clip">
+							</select> <br>
+							clip:<%=bg.clip%> <select name="background-clip">
 								<option value="">--- not set ---</option>
 								<option<% if(bg.clip == 'padding-box') {%> selected="selected"<%}%>>padding-box</option>
 								<option<% if(bg.clip == 'border-box') {%> selected="selected"<%}%>>border-box</option>
