background property editing and deleting works now

--- a/index.html
+++ b/index.html
@@ -107,32 +107,33 @@
 						</li>
 					</ul>
 					<% } else if (curMode == 1) { %>
-					<p><a href="#" class="btn">Add decoration</a></p>
-					<ul>
+					<p><a href="#" class="btn">Add</a></p>
+					<ul class="bgs">
 						<% _.each(backgrounds, function(bg) { %>
-						<li>
-							background
+						<li id="bgi<%=bg.id%>">
+							<a href="#" class="rem">x</a>
+							<h3>background: <%=bg.image.getName() %></h3>
 							<div style="background-image:<%=bg.image %>, url(layout/grid.png);" class="bgThumb"></div> 
-							repeat:<%=bg.repeat%> <select name="background-repeat">
+							repeat: <select name="repeat">
 								<option value="">--- not set ---</option>
 								<option<% if(bg.repeat == 'no-repeat') {%> selected="selected"<%}%>>no-repeat</option>
 								<option<% if(bg.repeat == 'repeat-x') {%> selected="selected"<%}%>>repeat-x</option>
 								<option<% if(bg.repeat == 'repeat-y') {%> selected="selected"<%}%>>repeat-y</option>
 								<option<% if(bg.repeat == 'repeat') {%> selected="selected"<%}%>>repeat</option>
 							</select> <br>
-							origin:<%=bg.origin%> <select name="background-origin">
-								<option value="">--- not set ---</option>
-								<option<% if(bg.origin == 'padding-box') {%> selected="selected"<%}%>>padding-box</option>
-								<option<% if(bg.origin == 'border-box') {%> selected="selected"<%}%>>border-box</option>
-								<option<% if(bg.origin == 'content-box') {%> selected="selected"<%}%>>content-box</option>
-							</select> <br>
-							attachment:<%=bg.attachment%> <select name="background-attachment">
+							attachment:<%=bg.attachment%> <select name="attachment">
 								<option value="">--- not set ---</option>
 								<option<% if(bg.attachment == 'scroll') {%> selected="selected"<%}%>>scroll</option>
 								<option<% if(bg.attachment == 'fixed') {%> selected="selected"<%}%>>fixed</option>
 								<option></option>
 							</select> <br>
-							clip:<%=bg.clip%> <select name="background-clip">
+							origin: <select name="origin">
+								<option value="">--- not set ---</option>
+								<option<% if(bg.origin == 'padding-box') {%> selected="selected"<%}%>>padding-box</option>
+								<option<% if(bg.origin == 'border-box') {%> selected="selected"<%}%>>border-box</option>
+								<option<% if(bg.origin == 'content-box') {%> selected="selected"<%}%>>content-box</option>
+							</select> <br>
+							clip:<%=bg.clip%> <select name="clip">
 								<option value="">--- not set ---</option>
 								<option<% if(bg.clip == 'padding-box') {%> selected="selected"<%}%>>padding-box</option>
 								<option<% if(bg.clip == 'border-box') {%> selected="selected"<%}%>>border-box</option>
