shadow properties now work, fixed shadow order

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							<span class="edit">edit</span>
 							<h3><span class="shLabel">text-shadow</span></h3>
 							<div style="background:url(layout/grid.png); background-size:auto;" class="bgThumb">
-								<div class="thumbText" style="text-shadow:<%=shad %>;">Aa</div>
+								<div class="thumbText" style="text-shadow:<%=shad %>;">a</div>
 							</div> 
 							<div class="bgControls">
 								<label>color:</label> <input type="color" name="color" value="<%=shad.color.hex %>" />
