basic font title search is working

--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
 					
 					<% } else if (curMode == 2) { %>
 					<ul class="props">
-						<li><span>font-family:</span>
+						<li><span>font-family:</span><br>
+							<input name="font-family" id="fontSearch" value="<%=styles['font-family']%>" placeholder="search or enter font-family" class="fontSearch" />
 							<div id="fontsModule"></div>
 						</li>
 						<li><span>font-weight:</span>
